<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.msgdesign.chat.ChatThread">

    <item
        android:id="@+id/add_friend"
        android:orderInCategory="1"
        android:icon="@drawable/add_friend"
        android:title="@string/menu_add_friends"
        app:showAsAction="never"/>

    <item
        android:id="@+id/search"
        android:orderInCategory="2"
        android:icon="@drawable/query"
        android:title="@string/menu_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/contact_us"
        android:orderInCategory="3"
        android:icon="@drawable/servers"
        android:title="@string/menu_ask_us"
        app:showAsAction="never"/>

</menu>