<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project Licensed under the 
    Apache License, Version 2.0 (the "License"); you may not use this file except 
    in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
    Unless required by applicable law or agreed to in writing, software distributed 
    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
    OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
    the specific language governing permissions and limitations under the License.
-->

<!--
     Common data-entry area of initial account setup screen - email, password, 
    default check
-->
<!-- xlarge version -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_register_basics_common_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dip"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="13dip"
        android:text="@string/accounts_welcome"
        android:textAppearance="@style/accountSetupInfoText"
        android:textColor="#b7b7b7"
        android:textSize="@dimen/setup_basics_instructions_text_size" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/account_new_username"
            style="@style/accountSetupEditFieldStyle"
            android:layout_weight="1"
            android:hint="@string/account_register_username_hint"
            android:imeOptions="flagNoFullscreen"
            android:inputType="text"
            android:maxLength="320" 
            android:nextFocusDown="@+id/account_new_name"/>
    </LinearLayout>

    <EditText
        android:id="@+id/account_new_name"
        style="@style/accountSetupEditFieldStyle"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:hint="@string/account_register_name_hint"
        android:imeOptions="flagNoFullscreen"
        android:inputType="text"
        android:maxLength="320" 
        android:nextFocusDown="@+id/account_password"/>
    <EditText
        android:id="@+id/account_password"
        style="@style/accountSetupEditFieldStyle"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:hint="@string/account_register_password_hint"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/show_password"
        android:maxLength="320"
        android:allowUndo="true"/>

    <View style="@style/accountSetupListDivider" />

    <LinearLayout
        android:id="@+id/show_password_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/show_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" 
            android:clickable="true"
            android:focusable="true" >

            <CheckBox
                android:id="@id/show_password"
                style="@style/accountSetupButtonCheckBoxStyleForLeft"
                android:duplicateParentState="true"
        		android:clickable="true"
				android:focusable="true"
                android:contentDescription="@string/account_register_show_password"
                android:checked="true" />

            <TextView
                android:id="@+id/show_password_hint"
                style="@style/accountSetup2LineTextStyleForLeft"
                android:duplicateParentState="true"
                android:text="@string/account_register_show_password"
                android:contentDescription="@string/dot" />
        </LinearLayout>

        <View style="@style/accountSetupListDivider" />
    </LinearLayout>
</LinearLayout>
